Dark mode fix and check

--- a/web.css
+++ b/web.css
@@ -54,7 +54,6 @@ div.desc {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  width: 50%;
 }
 
 /* Change the color of links on hover */
